# AHO-MS2003

./: CMakeLists.txt
src/: CMakeLists.txt  brute_force.cpp  main.cpp
test/: CMakeLists.txt  brute_force_test.cpp
